# scipion-em

./: .gitignore  .travis.yml  CHANGES.txt  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: main.yml  publish_and_tag.yml
pwem/: __init__.py  bibtex.py  constants.py  data.py  data_tiltpairs.py  filehandlers.py  protocols.conf  utils.py  wizard.py  wizards.py
pwem/cmd/: chimera_client.py  chimera_server.py  chimera_virus.py  convert.py  program.py
pwem/convert/: __init__.py  atom_struct.py  headers.py  image_handler.py  pdb_list.py  sequence.py  symmetry.py  transformations.py  trigonometry.py  utils.py
pwem/emlib/: __init__.py  _libNone.py  lib.py
pwem/metadata/: __init__.py  classes.py  constants.py  utils.py
pwem/objects/: __init__.py  data.py  data_flexhub.py  data_tiltpairs.py
pwem/protocol/: __init__.py  parallel.py  protocol.py  protocol_2d.py  protocol_3d.py  protocol_align_movies.py  protocol_alignment_assign.py  protocol_batch.py  protocol_classes_consensus.py  protocol_create_stream_data.py  protocol_ctf_assign.py  protocol_extract_coordinates.py  protocol_micrographs.py  protocol_movies.py  protocol_particles.py  protocol_particles_picking.py  protocol_pdf_report.py  protocol_sets.py  protocol_tests.py  protocol_tiltpairs.py
pwem/protocols/: __init__.py  parallel.py  protocol.py  protocol_2d.py  protocol_3d.py  protocol_align_movies.py  protocol_alignment_assign.py  protocol_alignment_invertHand.py  protocol_atomStructs_rmsd.py  protocol_base_flexhub.py  protocol_batch.py  protocol_movies.py  (+29 more)
(+146 files in other folders)
